Implementing Logout handling in order to test consecutive cases in one run. | Added methods in TrimioLoginTest | Added some debug methods in AppiumBase